2025-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-archive-all-gvfs-methods): Use `cdadr'.

2025-02-13  Stefan Kangas  <stefankangas@gmail.com>

	Avoid cl-caaar etc. compatibility aliases in Tramp

	* tramp-gvfs.el (tramp-gvfs-handler-askquestion):
	(tramp-gvfs-handler-mounted-unmounted):
	(tramp-gvfs-connection-mounted-p):
	* tramp-sh.el (tramp-sh-gio-monitor-process-filter):
	(tramp-sh-inotifywait-process-filter): Don't use cl-caaar
	etc. compatibility aliases.  (Bug#76249)

2025-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-monitor-process-filter):
	* tramp-sh.el (tramp-sh-gio-monitor-process-filter)
	(tramp-sh-inotifywait-process-filter): Use `insert-special-event'
	if possible.

2025-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-connection-properties): Add link to the
	Tramp manual in the docstring.

2025-01-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): Simplify.

2025-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-buffer): Set connection property " connected".

	* tramp-cache.el (tramp-list-connections):
	* tramp-cmds.el (tramp-cleanup-connection): Use connection
	property " connected" for a check of active connections.

2025-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-get-remote-pipe-buf): Make it more robust.

2024-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process):
	* tramp-smb.el (tramp-smb-handle-start-file-process): Don't use
	connection property "remote-command", it's superfluous.

	* tramp-archive.el (tramp-archive-local-file-name):
	Add `tramp-archive-method' to `tramp-methods' temporarily.

2024-12-29  Michael Albinus  <michael.albinus@gmx.de>
