@@ -1,3 +1,11 @@
+2025-02-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (with-tramp-saved-connection-property)
+	(with-tramp-saved-connection-properties): Add traces.
+
+	* tramp-sh.el (tramp-methods) <plink, plinkx, pscp, psftp>:
+	Adapt `tramp-login-args' and `tramp-copy-args' arguments.  (Bug#75746)
+
 2025-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-archive.el (tramp-archive-all-gvfs-methods): Use `cdadr'.
